test/error/while_cond.ss
while "hello" 3
# -> type error
